custom/templates/Monarch/css/monarch.css
/* ... */
#normal-threads thead th {
	border: 0px;
}

.floated .primary.button {
	text-align: center;
	background: #000;
	border: 2px #000 solid;
	color: #fff;
	padding: 15px 20px;
	border-radius: 5px;
	margin: 0 auto 20px auto;
	box-shadow: 0px;
	display: inline-block;
	-webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
}
.floated .primary.button:hover {
	text-align: center;
	background: #000;
	border: 2px #000 solid;
	color: #fff;
	margin: 0 auto 20px auto;
	display: inline-block;
	-webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0);
	box-shadow: 0 5px 10px rgba(0, 0, 0, 0);
}
.floated .primary.button:focus {
	text-align: center;
	background: #000 !important;
	border: 2px #000 solid;
	color: #fff;
	margin: 0 auto 20px auto;
	display: inline-block;
}

#form-login .ui.primary.button {
    text-align: center;
    background: #000;
    border: 2px #000 solid;
    color: #fff;
    margin: 0 auto 20px auto;
    display: inline-block;
    font-family: "PxGroteskRegular";
	border-radius: 5px;
	text-shadow: 0 1px 0 rgba(0, 0, 0, 0);
	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0);
	-webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
    }
#form-login .ui.negative.button {
	text-align: center;
	background: #d01919;
	border: 2px #d01919 solid;
	color: #fff;
	margin: 0 auto 20px auto;
	display: inline-block;
	font-family: "PxGroteskRegular";
	border-radius: 5px;
	text-shadow: 0 1px 0 rgba(0, 0, 0, 0);
	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0);
	-webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
}
@media only screen and (max-width: 445px) {
	#form-login .ui.primary.button {
		padding: 15px 8px;
	}
	#form-login .ui.negative.button {
		padding: 15px 8px;
	}
}
#form-register .ui.primary.button {
    text-align: center;
    background: #000;
    border: 2px #000 solid;
    color: #fff;
    margin: 0 auto 20px auto;
    display: inline-block;
    font-family: "PxGroteskRegular";
    border-radius: 5px;
    text-shadow: 0 1px 0 rgba(0, 0, 0, 0);
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0);
    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
    }
.ui.positive.button {
	background: #20ab41;
	padding: 15px 35px;
	text-align: center;
	border: 2px #20ab41 solid;
	color: #fff;
	margin: 0 auto 20px auto;
	display: inline-block;
	font-family: "PxGroteskRegular";
	border-radius: 5px;
	text-shadow: 0 1px 0 rgba(0, 0, 0, 0);
	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0);
	-webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
}
.ui.form input:not([type]), .ui.form input[type="date"], .ui.form input[type="datetime-local"], .ui.form input[type="email"], .ui.form input[type="file"], .ui.form input[type="number"], .ui.form input[type="password"], .ui.form input[type="search"], .ui.form input[type="tel"], .ui.form input[type="text"], .ui.form input[type="time"], .ui.form input[type="url"] {
	border: 0px;
	border-bottom: 2px solid #333;
	border-radius: 0px;
}
.ui.card > .extra a {
	font-family: "PxGroteskRegular";
}
.ui.padded.segment {
	-webkit-box-shadow: 0 10px 12px rgba(0, 0, 0, 0.1);
	box-shadow: 0 10px 12px rgba(0, 0, 0, 0.1);
}

/* 
* AS YOU FIND ME - ØM-53 
*/

#navbar .ui.button {
	background:transparent;
	color:#fff;
	text-transform: uppercase;
	font-family: "PxGroteskRegular";
}
#navbar .ui.button:hover {background:#fff;color:#111;border-radius: 0px;}
#navbar .ui.image.label {background:#fff;}

#news-post .header {padding:10px 10px;text-align: left;}

#news-post .content .header a {
	font-family: "PxGroteskRegular";
	color: #000;
	font-size: 1.4rem;
	font-weight: 600;
}
#news-post .content .header .meta a {
	font-family: "PxGroteskRegular";
	color: #999;
	font-size: 1rem;
	font-weight: 600;
}
#news-post .fa-arrow-right {margin-right:6px;}
#news-post .ui.primary.button {
	text-align: center;
	background: #000;
	border: 2px #000 solid;
	color: #fff;
	margin: 0 auto 20px auto;
	display: inline-block;
	font-family: "PxGroteskRegular";
	border-radius: 5px;
}
#news-post .ui.primary.button:hover {
	text-align: center;
	background: #000;
	border: 2px #000 solid;
	color: #fff;
	margin: 0 auto 20px auto;
	display: inline-block;
}
#news-post .mini {
  line-height: 1.28;
  font-size: .90rem;
  font-weight: bold;
  color: #ffffff;
  text-shadow: 0 1px 0 rgba(0,0,0,0);
  text-shadow: 0 -1px 0 rgba(0,0,0,0);
}
#news-post .description {padding: 10px 20px;}
#news-post .extra {padding: 10px 30px;}
.top-text h2 {
	text-transform: uppercase;
	font-family: "PxGroteskRegular";
	font-weight: 600;
	font-size: 25px;
	margin-top: 25px;
}
.top-text hr {
	width: 40px;
	border: 2px solid #111;
	margin-bottom: 35px;
}
.ui.menu:not(.vertical) .right.menu{padding-top:4px;display:-webkit-box;display:-ms-flexbox;display:flexbox;margin-left:auto!important}
.pushable > .pusher {min-height: 0;}

.ui.sidebar.menu .item {
	font-family: "PxGroteskRegular";
	text-transform: uppercase;
	font-weight: 600;
}
.ui.inverted.link.list .item a:hover {
	color: #fff !important;
	text-decoration: none;
}

.ui.relaxed.list {
	margin: 10px;
}
.ui.relaxed.list:not(.horizontal)>.item:not(:first-child) {
	padding: 1px;
}
.ui.relaxed.list:not(.horizontal)>.item:not(:last-child) {
	padding: 2px;
	line-height: 1.5;
}

/* ======= Generic section styling ======= */
.section {
  padding-top: 40px;
  padding-bottom: 30px;
}
.section-title {
  text-transform: uppercase;
  margin-top: 0;
  margin-bottom: 60px;
  font-weight: 800;
  font-size: 32px;
  position: relative;
  padding-bottom: 5px;
}
/* ... */

